array.island.Island.scala.error
Compilation error:
Island:15: error: Unmatched closing brace '}' ignored here
}
^